# pypy

./: .env  agent.py  ai.py  chat.py  chunk.py  compose.yaml  dash.py  main.py  note.ipynb  parse.py  pyproject.toml  settings.py
data/: M2.md  M3.md  Module-1.md  Module-5-Computer-Networks.md  cn.md
lancedb_data/engineering_notes.lance/_indices/6baeddb5-550b-410b-a3ab-6a81efb9f818/: metadata.lance  part_4_docs.lance  part_4_invert.lance  part_4_tokens.lance
lancedb_data/engineering_notes.lance/_transactions/: 0-e60fddfb-7966-455c-aaf3-01181ef5d803.txn  1-4d313682-e046-49fc-b875-33b3a8b4d542.txn  2-18aa51c6-fc86-4f7d-aa42-909fb4423fa9.txn
lancedb_data/engineering_notes.lance/_versions/: 1.manifest  2.manifest  3.manifest
